Changes color and added edit and plus

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -11,11 +11,24 @@ position: relative;
 }
 
 .icon a {
-color: #747474;
+color: #f8a978;
 text-decoration: none;
 &:hover {
   opacity: 0.5;
   }
+}
+
+#icon-plus {
+  right: 40px;
+
+}
+
+#icon-pencil {
+  right: 5px;
+}
+
+#icon-trash {
+  right: 27px;
 }
 
 
@@ -33,3 +46,5 @@ text-decoration: none;
 .card-product1 {
   height: 500px;
 }
+
+
