--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,9 +16,11 @@
               <p>Aplication starts: <%=scholarship.application_start_date%></p>
               <p>Deadline: <%=scholarship.application_end_date %></p>
 
+              <div class="icon">
               <%= link_to favorite_path(favorite), method: :delete do %>
                 <i class="fas fa-trash-alt"></i>
               <% end %>
+              </div>
 
               <%#= icon(current_user.likes?(favorite.favorited) ? "fas color-fas" : "far color-far" , "heart") %>
             </div>
@@ -34,36 +36,50 @@
     <h2>My Alerts</h2>
     <div class="favorites">
       <div class="favorite">
-
-      <%@sorted_alerts.each do |alert|%>
-        <div class="card-product">
-
-          <%if alert.institution.present?%>
-            <%=image_tag alert.institution.photo_url %>
-          <% else %>
-            <%= image_tag alert.area.photo_url %>
+        <div class="icon" id="icon-plus">
+          <%= link_to new_alert_path do %>
+            <i class="fas fa-plus"></i>
           <% end %>
-          <div class="card_product_infos">
-            <%if alert.institution.present? && alert.institution.present? %>
-              <p><strong><%=alert.institution.name  %></strong></p>
-              <h2><%= link_to alert.area.name, scholarships_path %></h2>
-            <% elsif alert.institution.present? %>
-              <p><strong><%=alert.institution.name  %></strong></p>
-            <% else %>
-              <h2><%= link_to alert.area.name, scholarships_path %></h2>
-            <% end %>
-
-            <% if alert.unread_notifications? %>
-               <%=  link_to pluralize(alert.notifications.count, 'new notification'), change_notification_status_path(alert.id), method: :patch %>
-            <% end %>
-
-            <%= link_to alert_path(alert), method: :delete do %>
-              <i class="fas fa-trash-alt"></i>
-            <% end %>
-
-          </div>
         </div>
-      <% end%>
+
+
+
+        <%@sorted_alerts.each do |alert|%>
+          <div class="card-product">
+
+            <%if alert.institution.present?%>
+              <%=image_tag alert.institution.photo_url %>
+            <% else %>
+              <%= image_tag alert.area.photo_url %>
+            <% end %>
+            <div class="card_product_infos">
+              <%if alert.institution.present? && alert.institution.present? %>
+                <p><strong><%=alert.institution.name  %></strong></p>
+                <h2><%= link_to alert.area.name, scholarships_path %></h2>
+              <% elsif alert.institution.present? %>
+                <p><strong><%=alert.institution.name  %></strong></p>
+              <% else %>
+                <h2><%= link_to alert.area.name, scholarships_path %></h2>
+              <% end %>
+
+              <% if alert.unread_notifications? %>
+                 <%=  link_to pluralize(alert.notifications.count, 'new notification'), change_notification_status_path(alert.id), method: :patch %>
+              <% end %>
+
+              <div class="icon" id="icon-trash">
+              <%= link_to alert_path(alert), method: :delete do %>
+                <i class="fas fa-trash-alt"></i>
+              <% end %>
+              </div>
+              <div class="icon" id="icon-pencil">
+                <%= link_to edit_alert_path(alert) do %>
+                <i class="fas fa-pencil-alt"></i>
+                <% end %>
+              </div>
+
+            </div>
+          </div>
+        <% end%>
       </div>
     </div>
   </div>
