--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,11 +20,13 @@
             <h2><%= scholarship.name%></h2>
             <p>Aplication starts: <%=scholarship.application_start_date%></p>
             <p>Deadline: <%=scholarship.application_end_date %></p>
-            <div class="icon">
-              <%= link_to favorite_path(favorite), method: :delete do %>
-                <i class="fas fa-trash-alt"></i>
-              <% end %>
-              </div>
+
+          </div>
+
+          <div class="icon">
+            <%= link_to favorite_path(favorite), method: :delete do %>
+              <i class="fas fa-trash-alt"></i>
+            <% end %>
           </div>
           <%= link_to '', scholarship_path(scholarship.id), class: 'card-profile-link' %>
         </div>
@@ -45,7 +47,7 @@
             <i class="fas fa-plus"></i>
           <% end %>
         </div>
-              
+
 
 
       <%@sorted_alerts.each do |alert|%>
@@ -65,7 +67,7 @@
               <h2><%= alert.area.name %></h2>
 
             <% end %>
-           
+
 
 
             <% if alert.unread_notifications? %>
@@ -108,7 +110,7 @@
           </div>
         </div>
       </div>
-       <div class="icon-pencil">
+       <div class="icon" id="icon-pencil-profile">
           <%= link_to edit_user_registration_path do %>
           <i class="color-fas-pencil-alt">
           <i class="fas fa-pencil-alt"></i>
