--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 
 .navbar-lewagon {
-
   justify-content: space-between;
   background: #ffd1b3;
-
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -19,7 +17,7 @@
 
 
 .navbar-nav a {
-  margin-top: 30px;
+  // margin-top: 30px;
   padding-top: 10px;
   margin-right: 8px;
   font-size: 14px;
