--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,4 @@
-
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+<div class="<%= navbar_classes %>">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "https://res.cloudinary.com/ddec9kvgc/image/upload/v1567530182/logo_funder/logo_funder_badge_b7pgdp.png" %>
     <% end %>
