--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 .banner {
-  min-height: calc(100vh - 55px);;
+  min-height: calc(100vh - 55px);
   background-size: cover;
   background-position: center;
   padding: 150px 0;
   margin-top: 0;
+  position: relative;
 
 }
 
@@ -23,4 +24,22 @@
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-family: "Roboto", sans-serif;
+}
+
+.login-banner {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  list-style-type: none;
+  text-decoration: none;
+
+
+}
+
+.full-logo {
+  height: 90px;
+  width: 200px;
+  position: absolute;
+  top: 15px;
+  left: 50px;
 }
