--- a/app/assets/stylesheets/components/_navbar_homepage.scss
+++ b/app/assets/stylesheets/components/_navbar_homepage.scss
@@ -1,6 +1,8 @@
 .navbar-homepage {
   // visibility: hidden;
   display: none;
+  // background-color: transparent;
+  // transition: 0.5s background-color ease;
 
 
   &.navbar-lewagon-show {
