added Noty package to implement flash notifications when creating and deleting favorites. Modified favorite.js to implement the flash notifications. Imported the CSS on application.scss.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,6 @@
 @import "components/index";
 @import "pages/index";
 @import "components/product_card";
+
+@import "noty/src/noty.scss";
+@import "noty/src/themes/semanticui.scss";
