--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -3,8 +3,25 @@
   width: 500px;
   margin-left: 15px;
   #query {
-    width: 400px;
+    width: 250px;
 
   }
 
 }
+
+.search-button {
+  background-color: transparent;
+  border-color: transparent ;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 20px;
+
+
+
+}
+
+.icon-search{
+  padding-top: 8px;
+}
+
+// #E67E22
+
