--- a/app/views/scholarships/show.html.erb
+++ b/app/views/scholarships/show.html.erb
@@ -46,7 +46,7 @@
   </div>
 
   <div class="btn-back">
-      <%= link_to "Back to Scholarships", scholarships_path, class: 'btn btn-warning' %>
+      <%= link_to "Back to Scholarships", scholarships_path, class: 'btn btn-outline-warning'%>
   </div>
 
 </div>
