--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,11 +1,18 @@
 
 <div class="search-form  form-inline">
   <%= form_tag scholarships_path, method: :get do %>
+  <div class="input-group">
     <%= text_field_tag :query,
       params[:query],
       class: "form-control",
       placeholder: "Find a scholarship"
     %>
-    <%= submit_tag "Search", class: "btn btn-warning" %>
+    <span class="input-group-btn">
+      <%= button_tag( :class => "search-button") do %>
+        <i class="fas fa-search icon-search"></i>
+      <% end %>
+    </span>
+  </div>
+    <%#= submit_tag "Search", class: "fas fa-search" %>
   <% end %>
 </div>
