inserted explanation icons on home page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,8 +9,8 @@
 @import "card_category";
 @import "search_form";
 @import "position_search";
-
 @import "institution_card";
-
 @import "form";
+@import "carousel_home";
+
 
