--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="<%= controller_name %> <%= action_name %>">
       <%= render 'shared/navbar' %>
       <%= render 'shared/flashes' %>
       <% if params[:controller] == "pages" %>
