Added Sign up in all pages not logged

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -32,9 +32,17 @@
   right: 20px;
   list-style-type: none;
   text-decoration: none;
-
-
 }
+
+.sign-up-banner {
+  position: absolute;
+  top: 30px;
+  right: 100px;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+
 
 .full-logo {
   height: 90px;
