--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -2,12 +2,16 @@
 .search-form {
   width: 500px;
   margin-left: 15px;
-  #query {
+  #query{
     width: 250px;
+  }
 
   }
 
-}
+// .form-control:focus {
+//   color: #ffd1b3;
+// }
+
 
 .search-button {
   background-color: transparent;
