Calendar corrected to not click and formated, changed class for heart-far and heart-fas in javascript, index and show scholarship

--- a/app/assets/stylesheets/components/_institution_card.scss
+++ b/app/assets/stylesheets/components/_institution_card.scss
@@ -98,6 +98,18 @@
 
 }
 
+.application ul {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+
+}
+
+.application ul li {
+  display: inline;
+}
+
+
 // #eae7e7
 
 .description {
