--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -13,7 +13,7 @@
             <%= image_tag cl_image_path result.institution.photo %>
 
           <div class="card_product_infos" id="<%= result.id %>">
-             <%= icon(current_user.likes?(result) ? "fas color-fas" : "far color-far" , "heart") %>
+             <%= icon(current_user.likes?(result) ? "fas color-fas heart-fas" : "far color-far heart-fav" , "heart") %>
             <h2><%= result.name %></h2>
             <h2><%= result.institution.name %></h2>
             <p><%= result.description %></p>
