reformatted search button on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,10 +39,10 @@
         <%= form_tag scholarships_path, method: :get do %>
           <%= text_field_tag :query,
             params[:query],
-            class: "form-control",
+            class: "form-control form-control-lg",
             placeholder: "Find a scholarship"
           %>
-          <%= submit_tag "Search", class: "btn btn-warning home-search-btn" %>
+          <%= submit_tag "Search", class: "btn btn-lg btn-warning home-search-btn" %>
         <% end %>
       </div>
     </div>
@@ -52,7 +52,7 @@
 <%= render 'shared/search_results' %>
 
 
- 
+
 
 
 <div class="slideshow-container">
