Added description per area, corrected padding and font style for h2 h4 and truncate description in index page

--- a/app/assets/stylesheets/components/_product_card.scss
+++ b/app/assets/stylesheets/components/_product_card.scss
@@ -24,6 +24,18 @@
   font-size: 16px;
   font-weight: bold;
   margin: 0;
+  padding-rigth: 15px;
+  font-family: "Roboto", sans-serif;
+  color: #4d4d4d;
+}
+
+.card-product h4 {
+  font-size: 14px;
+  font-weight: ligther;
+  margin: 0;
+  padding-rigth: 15px;
+  font-family: "Roboto", sans-serif;
+  color: #4d4d4d;
 }
 
 .card-product p {
