--- a/app/views/scholarships/show.html.erb
+++ b/app/views/scholarships/show.html.erb
@@ -28,7 +28,7 @@
 
       <div class="description">
 
-        <p><%= @scholarship.description %> <p>The breadth and depth of our expertise enables us to offer supervision in all major areas of economics and finance. The School has more than 40 research-active faculty working in a wide range of research areas, including macroeconomics, microeconomic theory and game theory, applied microeconomics, econometric theory, time series analysis, theoretical and empirical finance.</p></p>
+        <p><%= @scholarship.description %></p>
 
       </div>
 
