--- a/app/views/alerts/edit.html.erb
+++ b/app/views/alerts/edit.html.erb
@@ -1,29 +1,1 @@
-<div class="container mb-4">
-  <div class="row justify-content-center">
-    <div class="col-sm-12 col-lg-6">
-      <h2>Edit Alert</h2>
-      <%= simple_form_for @alert, method: :patch do |f| %>
-
-        <% if @alert.errors.any? %>
-         <div class="alert alert-danger">
-            <h3>Please fix these problems:</h3>
-            <ul>
-            <% @alert.errors.full_messages.each do |error| %>
-              <li><%= error %></li>
-            <% end %>
-            </ul>
-          </div>
-        <% end %>
-
-        <div class="form-inputs">
-          <%= f.input :name %>
-          <%= f.input :description, as: :text %>
-          <%= f.input :area_id, collection: @areas %>
-          <%= f.input :institution_id, collection: @institutions%>
-          <%= f.submit%>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
-
+<%= render "edit" %>
