--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -1,28 +1,1 @@
-<div class="container mb-4">
-  <div class="row justify-content-center">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-6 justify-content-center form-login">
-      <h2>New Alert</h2>
-      <%= simple_form_for @alert do |f| %>
-
-        <% if @alert.errors.any? %>
-         <div class="alert alert-danger">
-            <h3>Please fix these problems:</h3>
-            <ul>
-            <% @alert.errors.full_messages.each do |error| %>
-              <li><%= error %></li>
-            <% end %>
-            </ul>
-          </div>
-        <% end %>
-
-        <div class="form-inputs">
-          <%= f.input :name %>
-          <%= f.input :description, as: :text %>
-          <%= f.input :area_id, collection: @areas %>
-          <%= f.input :institution_id, collection: @institutions%>
-          <%= f.button :submit, "submit", class: "btn btn-warning"%>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render "new" %>
