--- a/app/views/scholarships/show.html.erb
+++ b/app/views/scholarships/show.html.erb
@@ -15,6 +15,7 @@
       <div class="infos-name">
         <h2><%= @scholarship.name %></h2>
         <h3><%= @scholarship.institution.name %></h3>
+        <h4><%= @scholarship.institution.country %></h4>
         <h4><%= @scholarship.area.name %></h4>
 
         <div class="application">
