--- a/app/assets/stylesheets/components/_institution_card.scss
+++ b/app/assets/stylesheets/components/_institution_card.scss
@@ -64,7 +64,7 @@
 }
 
 .infos-name {
-  background-color: #eae9e9;
+  background-color: #f3f1f1 ;
   width: 100%;
   height: 150%;
   border-radius: 6px;
@@ -149,3 +149,6 @@
   // object-fit: cover;
   // position: relative;
 }
+
+
+// #eae9e9
