added 2 csss classes to highlight and offset the favorites based on the application dates. In the show page, added conditional formatting on the favorite block to highlight and offest favorites based on application dates.

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -77,6 +77,16 @@ text-decoration: none;
   margin-bottom: 10px;
 }
 
+.card-product-profile-highlight {
+  background-color: #ffecdf;
+}
+
+.card-product-profile-lowlight {
+  background-color: #C1C1C1;
+  opacity: 0.5;
+
+}
+
 .card-product-profile h2 {
   font-size: 16px;
   font-weight: bold;
