--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -216,5 +216,16 @@ text-decoration: none;
 
 }
 
+.notification-link a {
+
+  color: red;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  opacity: 0.7;
+
+}
+
 
 
