--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -93,7 +93,9 @@
 
 
             <% if alert.unread_notifications? %>
+            <div class="notification-link">
               <%=  link_to pluralize(alert.unread_notif_count, 'new notification'), change_notification_status_path(alert.id), method: :patch %>
+              </div>
             <% end %>
             <div class="icon" id="icon-trash">
               <%= link_to alert_path(alert), method: :delete do %>
