--- a/app/assets/stylesheets/components/_institution_card.scss
+++ b/app/assets/stylesheets/components/_institution_card.scss
@@ -40,14 +40,17 @@
   position: relative;
 
 }
+
+
+@include media-breakpoint-up(md) {
 .show-card-text {
   margin-top: 30px;
   text-align: left;
   padding: 10px;
   // margin-bottom: 80px;
   margin: 70px 50px;
+  }
 }
-
 .btn-info {
   position: absolute;
   right: 18px;
