fixed pointer on card hover on profile page and added pointer to heart in scholarship show page

--- a/app/assets/stylesheets/components/_institution_card.scss
+++ b/app/assets/stylesheets/components/_institution_card.scss
@@ -58,12 +58,15 @@
 
 }
 
-.hearth-icon {
+.heart-icon {
   position: absolute;
   top: 285px;
   right: 22px;
   font-size: 25px;
-  color: black;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 .infos-name {
