corrected the application end date on the favorites cards

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
                   <p>Deadline: <%=scholarship.application_end_date %></p>
               <% else %>
                 <p>Application start: <%=scholarship.application_start_date%></p>
-                <p>Deadline: <%=scholarship.application_start_date%></p>
+                <p>Deadline: <%=scholarship.application_end_date%></p>
               <% end %>
             </div>
 
