--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,11 +10,55 @@
 
 
     <% if user_signed_in? %>
-      <div>
-        <li class="login-banner">
-          <%= link_to "Log out", destroy_user_session_path , method: :delete, class: "btn btn-outline-light" %>
-        </li>
-      </div>
+    <li class="banner-item" id="profile-link">
+          <%= link_to "Profile", user_path(current_user)%>
+          </li>
+          <li class="banner-item">
+            <div class="notification-bell" id="bell-icon">
+              <% if current_user.notifications.where(status:"unread").count >0 %>
+
+                  <%= link_to user_path(current_user) do %>
+                    <i class="fas fa-bell color-fas-bell"></i>
+                  <% end %>
+
+              <% else %>
+
+                  <i class="far fa-bell color-far-bell"></i>
+
+              <% end %>
+            </div>
+          </li>
+
+          <% if current_user.profile_incomplete? %>
+            <li class="banner-item">
+              <%= link_to "Edit Profile", edit_user_registration_path, class: "nav-link" %>
+            </li>
+          <% end %>
+
+          <li class="banner-item dropdown" id="photo-user">
+            <% if current_user.photo? %>
+            <%= cl_image_tag current_user.photo , class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <% else %>
+            <%= image_tag 'blank-avatar.png'  , class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <% end %>
+
+
+
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <% if current_user.student? %>
+              <% end %>
+
+              <% if current_user.premium_student? %>
+                <%= link_to "premium student action", "#", class: "dropdown-item" %>
+              <% end %>
+
+              <% if current_user.institution? %>
+                <%= link_to "institution action", "#", class: "dropdown-item" %>
+              <% end %>
+
+              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            </div>
+          </li>
 
     <% else %>
       <div>
