fixed slides on carousel

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -117,7 +117,7 @@
 
 <div class="mySlides">
   <%= link_to new_user_registration_path do %>
-  <h5>Create a free account, so you can...</h5>
+  <h5>Create an account, so you can...</h5>
   <i class="fas fa-check icon-check"></i>
   <% end %>
 </div>
@@ -136,10 +136,6 @@
   <% end %>
 </div>
 
-<div class="mySlides">
-  <h5>Discover more with a premium account</h5>
-  <i class="fas fa-star icon-star"></i>
-</div>
 
 <a class="prev">❮</a>
 <a class="next">❯</a>
