--- a/app/assets/stylesheets/components/carousel_home.scss
+++ b/app/assets/stylesheets/components/carousel_home.scss
@@ -20,10 +20,10 @@
   position: relative;
   padding: 80px;
   text-align: center;
+
   &:hover {
     opacity: 0.5;
   }
-
 }
 
 .mySlides a {
@@ -37,63 +37,16 @@
   color: #4d4d4d;
   font-weight: lighter;
 }
+
+.mySlides .icon-slide {
+  color: #f8a978;
+  font-weight: bold;
+  font-size: 35px;
+  margin-right: 20px;
+}
+
 .mySlides .icon-arrow {
-  position: absolute;
-  right:150px;
-  top: 39%;
   font-size: 40px;
-  color: #f8a978;
-  font-weight: bold;
-}
-
-.mySlides .icon-list {
-  position: absolute;
-  right:150px;
-  top: 39%;
-  font-size: 35px;
-  color: #f8a978;
-  font-weight: bold;
-
-
-}
-
-.mySlides .icon-check {
-  position: absolute;
-  right:150px;
-  top: 39%;
-  font-size: 35px;
-  color: #f8a978;
-  font-weight: bold;
-
-}
-.mySlides .icon-heart {
-  position: absolute;
-  right:150px;
-  top: 39%;
-  font-size: 35px;
-  color: #f8a978;
-  font-weight: bold;
-
-}
-
-.mySlides .icon-bell {
-  position: absolute;
-  right:150px;
-  top: 39%;
-  font-size: 35px;
-  color: #f8a978;
-  font-weight: bold;
-
-}
-
-.mySlides .icon-star {
-  position: absolute;
-  right:150px;
-  top: 39%;
-  font-size: 35px;
-  color: #f8a978;
-  font-weight: bold;
-
 }
 
 /* Next & previous buttons */
@@ -120,8 +73,33 @@
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  color: white;
+  background-color: rgba(0,0,0, 0.1);
+  color: #f8a978 !important;
+}
+
+@media all and (max-width: 690px) {
+  .slideshow-container {
+
+    margin-left: 12%;
+    margin-right: 12%;
+    width: 100%;
+    margin: 0%;
+
+
+    .mySlides {
+      width: 100%;
+      margin-top: 10px;
+      font-size:
+    }
+
+    .mySlides h5 {
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    color: #4d4d4d;
+    font-weight: lighter;
+}
+  }
+
 }
 
 
