--- a/app/assets/stylesheets/components/carousel_home.scss
+++ b/app/assets/stylesheets/components/carousel_home.scss
@@ -89,7 +89,7 @@
     .mySlides {
       width: 100%;
       margin-top: 10px;
-      font-size:
+      font-size: 20px;
     }
 
     .mySlides h5 {
