bolded profile personal info page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -124,12 +124,16 @@
       <div class="card-product1">
         <div class="card_product_infos">
           <ul>
-            <li><h5><strong>Name:</strong> <%=@user.first_name%> <%=@user.last_name%> </h5></li>
-            <li> <h5><strong>Area of study:</strong> <%=@user.area%></h5></li>
-            <li> <h5><strong>Nationality:</strong> <%=@user.nationality%></h5></li>
-            <li> <h5><strong>Country of residence:</strong> <%=@user.country%></h5></li>
-            <li> <h5><strong>Date of birth:</strong> <%=@user.date_of_birth%></h5></li>
-            <li> <h5><strong>Gender:</strong> <%=@user.gender%></h5></li>
+
+
+              <li><p><strong>Name:</strong> <%=@user.first_name%> <%=@user.last_name%></p></li>
+              <li> <p><strong>Area of study:</strong> <%=@user.area%></p></li>
+              <li> <p><strong>Nationality:</strong> <%=@user.nationality%></p></li>
+              <li> <p><strong>Country of residence:</strong> <%=@user.country%></p></li>
+              <li> <p><strong>Date of birth:</strong> <%=@user.date_of_birth%></p></li>
+              <li> <p><strong>Gender:</strong> <%=@user.gender%></p></li>
+
+
           </ul>
         </div>
       </div>
