--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -138,7 +138,9 @@ text-decoration: none;
   height: 500px;
   background: #f0eded;
   border-radius: 6px;
-  padding: 25px;
+  padding: 10px;
+
+
 }
 
 .personal-info {
@@ -148,6 +150,7 @@ text-decoration: none;
   border-radius: 6px;
   padding: 25px;
   margin-top: 100px;
+
 
   h1 {
     font-family: "Roboto", sans-serif;
@@ -165,17 +168,16 @@ text-decoration: none;
 .card-product1 ul {
 
   list-style-type: none;
-
 }
 
 
-.card-product1 li h5 {
+.card-product1 ul p {
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
-  color: #4d4d4d;
+  font-size: 16px;
+  color: #727272;
   margin-top: 20px;
   margin-bottom: 20px;
-  font-weight: lighter;
+  // font-weight: lighter;
 }
 
 .card-profile-link {
