added style to email, added scholarship info on email subject.

--- a/app/views/notification_mailer/notification.html.erb
+++ b/app/views/notification_mailer/notification.html.erb
@@ -2,12 +2,12 @@
 
 <p>You have a new scholarship notification!</p>
 
-<p><strong><%= @new_notification.scholarship.name %></strong></p>
+<p><strong>Scholarship name: </strong><%= @new_notification.scholarship.name %></p>
 <p><strong>Area:</strong> <%= @new_notification.scholarship.area.name %></p>
 <p><strong>Institution:</strong> <%= @new_notification.scholarship.institution.name %></p>
 <p><strong>Description:</strong> <%= @new_notification.scholarship.description %></p>
 
-<p>Check your profile page on <a href="http://www.funder-app.site/">Funder</a> for more details!</p>
+<p>Check your profile page on <a href="http://www.funder-app.site/users/sign_in">Funder</a> for more details!</p>
 
 <p>Cheers!</p>
 
