--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,13 +1,267 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>
-      /* Email styles need to be inline */
-    </style>
-  </head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Funder</title>
+  <style type="text/css">
 
-  <body>
-    <%= yield %>
-  </body>
+  /* Take care of image borders and formatting */
+
+  img {
+    max-width: 600px;
+    outline: none;
+    text-decoration: none;
+    -ms-interpolation-mode: bicubic;
+  }
+
+  a {
+    border: 0;
+    outline: none;
+  }
+
+  a img {
+    border: none;
+  }
+
+  /* General styling */
+
+  td, h1, h2, h3  {
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
+  }
+
+  td {
+    font-size: 13px;
+    line-height: 150%;
+    text-align: left;
+  }
+
+  body {
+    -webkit-font-smoothing:antialiased;
+    -webkit-text-size-adjust:none;
+    width: 100%;
+    height: 100%;
+    color: #333d49;
+    background: #f3f4f6;
+  }
+
+  table {
+    border-collapse: collapse !important;
+  }
+
+
+  h1, h2, h3 {
+    padding: 0;
+    margin: 0;
+    color: #00A0A3;
+    font-weight: 400;
+    line-height: 110%;
+  }
+
+  h1 {
+    font-size: 35px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  h4 {
+    font-size: 18px;
+    font-weight: normal;
+  }
+
+  .important-font {
+    color: #00A0A3;
+    font-weight: bold;
+  }
+
+  .hide {
+    display: none !important;
+  }
+
+  .force-full-width {
+    width: 100% !important;
+  }
+
+  /* btns */
+  @media all{
+  a{background-color:transparent;}
+  a:active,a:hover{outline:0;}
+  @media print{
+  *,*:before,*:after{background:transparent!important;color:#000!important;box-shadow:none!important;text-shadow:none!important;}
+  a,a:visited{text-decoration:underline;}
+  a[href]:after{content:" (" attr(href) ")";}
+  }
+  *{box-sizing:border-box;}
+  *:before,*:after{box-sizing:border-box;}
+  a{color:#00A0A3;text-decoration:none;}
+  a:hover,a:focus{color:#dfac01;text-decoration:underline;}
+  a:focus{outline:5px auto -webkit-focus-ring-color;outline-offset:-2px;}
+  .btn{display:inline-block;margin-bottom:0;font-weight:normal;text-align:center;vertical-align:middle;touch-action:manipulation;cursor:pointer;background-image:none;border:1px solid transparent;white-space:nowrap;padding:6px 12px;font-size:18px;line-height:1.428571429;border-radius:2px;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
+  .btn:focus,.btn:active:focus{outline:5px auto -webkit-focus-ring-color;outline-offset:-2px;}
+  .btn:hover,.btn:focus{color:#333;text-decoration:none;}
+  .btn:active{outline:0;background-image:none;box-shadow:inset 0 3px 5px rgba(0, 0, 0, 0.125);}
+  .btn-primary{color:#fff !important;background-color:#00A0A3;border-color:#00A0A3;}
+  .btn-primary:focus{color:#fff;background-color:#00A0A3;border-color:#00A0A3;}
+  .btn-primary:hover{color:#fff;background-color:#00A0A3;border-color:#00A0A3;}
+  .btn-primary:active{color:#fff;background-color:#00A0A3;border-color:#00A0A3;}
+  .btn-primary:active:hover,.btn-primary:active:focus{color:#fff;background-color:#d5a401;border-color:#00A0A3;}
+  .btn-primary:active{background-image:none;}
+  a{color:#00A0A3;}
+  .btn-primary,.btn-primary:hover{color:#00A0A3;}
+  }
+  </style>
+
+  <style type="text/css" media="screen">
+      @media screen {
+        @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+
+        /* Thanks Outlook 2013! */
+        td, h1, h2, h3 {
+          font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif !important;
+        }
+      }
+  </style>
+
+  <style type="text/css" media="only screen and (max-width: 600px)">
+    /* Mobile styles */
+    @media only screen and (max-width: 600px) {
+
+      table[class="w320"] {
+        width: 320px !important;
+      }
+
+      table[class="w300"] {
+        width: 300px !important;
+      }
+
+      table[class="w290"] {
+        width: 290px !important;
+      }
+
+      td[class="w320"] {
+        width: 320px !important;
+      }
+
+      td[class~="mobile-padding"] {
+        padding-left: 14px !important;
+        padding-right: 14px !important;
+      }
+
+      td[class*="mobile-padding-left"] {
+        padding-left: 14px !important;
+      }
+
+      td[class*="mobile-padding-right"] {
+        padding-right: 14px !important;
+      }
+
+      td[class*="mobile-block"] {
+        display: block !important;
+        width: 100% !important;
+        text-align: left !important;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+        padding-bottom: 15px !important;
+      }
+
+      td[class*="mobile-no-padding-bottom"] {
+        padding-bottom: 0 !important;
+      }
+
+      td[class~="mobile-center"] {
+        text-align: center !important;
+      }
+
+      table[class*="mobile-center-block"] {
+        float: none !important;
+        margin: 0 auto !important;
+      }
+
+      *[class*="mobile-hide"] {
+        display: none !important;
+        width: 0 !important;
+        height: 0 !important;
+        line-height: 0 !important;
+        font-size: 0 !important;
+      }
+
+      td[class*="mobile-border"] {
+        border: 0 !important;
+      }
+    }
+  </style>
+</head>
+<body class="body" style="padding:0; margin:0; display:block; background:#f3f4f6; -webkit-text-size-adjust:none" bgcolor="#f3f4f6">
+<table align="center" cellpadding="0" cellspacing="0" width="100%" height="100%">
+  <tr>
+    <td align="center" valign="top" bgcolor="#f3f4f6"  width="100%">
+
+    <table cellspacing="0" cellpadding="0" width="100%">
+      <tr>
+        <td style="background: #C1C1C1;" width="100%">
+          <center>
+            <table cellspacing="0" cellpadding="0" width="600" class="w320">
+              <tr>
+                <td valign="top" class="mobile-block mobile-no-padding-bottom mobile-center" width="270" style="padding:20px 10px 20px 20px;">
+                  <a href="#" style="text-decoration:none;">
+                  <%= cl_image_tag("logo_funder.png", :height => 70) %>
+                  <!--  <img src="<%#= image_url('logo_funder.png') %>" height="20" alt="Funder Logo"/> -->
+                  </a>
+                </td>
+              </tr>
+            </table>
+          </center>
+        </td>
+      </tr>
+      <tr>
+        <td style="border-bottom:1px solid #e7e7e7;">
+          <center>
+            <table cellpadding="0" cellspacing="0" width="600" class="w320">
+              <tr>
+                <td align="left" class="mobile-padding" style="padding:20px">
+
+                  <br class="mobile-hide" />
+
+                  <%= yield %>
+
+                  <br>
+
+                </td>
+              </tr>
+            </table>
+          </center>
+        </td>
+      </tr>
+      <tr>
+        <td style="background-color:#FF752B;">
+          <center>
+            <table border="0" cellpadding="0" cellspacing="0" width="600" class="w320" style="height:100%; color:#ffffff" bgcolor="#00A0A3" >
+              <tr>
+                <td valign="middle" class="mobile-block mobile-center" width="170" style="padding:10px 15px 10px 10px; background-color:#FF752B;">
+                  <table border="0" cellpadding="0" cellspacing="0" class="mobile-center-block" align="center">
+                    <tr>
+                      <td align="right">
+                        <div><strong>© Funder. All rights reserved.</strong></div>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+            </table>
+          </center>
+        </td>
+      </tr>
+    </table>
+
+    </td>
+  </tr>
+</table>
+</body>
 </html>
