--- a/app/assets/stylesheets/components/_institution_card.scss
+++ b/app/assets/stylesheets/components/_institution_card.scss
@@ -158,3 +158,18 @@
 
 
 // #eae9e9
+
+
+.estrela ul {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+  font-weight: lighter;
+
+
+}
+
+.estrela ul li {
+  display: inline;
+
+}
