--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <!-- <link href="lib/noty.css" rel="stylesheet"> -->
+    <%= favicon_link_tag %>
   </head>
   <body class="<%= controller_name %> <%= action_name %>">
       <%= render 'shared/navbar' %>
